--- a/config.env
+++ b/config.env
@@ -34,5 +34,5 @@ START_MSG="<b>Hey {first_name}</b>,\n\n    <i>I am Auto Animes Store & Automater
 START_BUTTONS="UPDATES|https://telegram.me/Matiz_Tech SUPPORT|https://t.me/+ZFbx7IrwGIU4NjVh"
 
 # Update 
-UPSTREAM_REPO="https://github.com/jujutsunanami/yt"
+UPSTREAM_REPO="https://github.com/jujutsunanami/sakr"
 UPSTREAM_BRANCH="main"
