--- a/config.env
+++ b/config.env
@@ -18,11 +18,9 @@ ADMINS="1772989999" # Multiple Separated By Space
 RSS_ITEMS="https://nyaa.land/?page=rss&q=1080p&c=0_0&f=0"
 SEND_SCHEDULE="True"
 BRAND_UNAME="@Og" # Username of Channel with @ or Text as Footer of Every Post
+FFCODE_Hdrip = ffmpeg -i '{}' -progress '{}' -c:v copy -c:a copy -c:s copy -map 0 '{}' -y
 FFCODE_1080 = ffmpeg -i '{}' -progress '{}' -c:v copy -c:a copy -c:s copy -map 0 '{}' -y
-FFCODE_720 = ffmpeg -i '{}' -progress '{}' -c:v copy -c:a copy -c:s copy -map 0 '{}' -y
-FFCODE_480 = ffmpeg -i '{}' -progress '{}' -c:v copy -c:a copy -c:s copy -map 0 '{}' -y
-FFCODE_360 = ffmpeg -i '{}' -progress '{}' -c:v copy -c:a copy -c:s copy -map 0 '{}' -y
-QUALS="360 480 720 1080" # Qualities Separated by Space without 'p' ( Sequence Specific )
+QUALS="Hdrip 1080" # Qualities Separated by Space without 'p' ( Sequence Specific )
 
 # Customisation
 AS_DOC="True"
